--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,7 +19,7 @@
             <h1 class="text-3xl font-bold text-gray-800">Training OS</h1>
             <div class="flex items-center space-x-4">
                 <button @click="prevWeek()" class="px-3 py-1 bg-white border rounded shadow-sm hover:bg-gray-50">&larr; Prev</button>
-                <span class="font-semibold text-lg" x-text="`Week ${currentWeek} - ${currentYear}`"></span>
+                <span class="font-semibold text-lg" x-text="weekLabel"></span>
                 <button @click="nextWeek()" class="px-3 py-1 bg-white border rounded shadow-sm hover:bg-gray-50">Next &rarr;</button>
             </div>
         </header>
@@ -65,9 +65,9 @@
                 <div class="mt-8 pt-6 border-t border-gray-200">
                     <h3 class="text-lg font-semibold mb-3">Actuals</h3>
                     <div class="space-y-2 text-sm text-gray-600">
-                        <p><strong>Total Distance:</strong> <span x-text="summary.total_distance_km + ' km'"></span></p>
+                        <p><strong>Total Distance (Run/Trail):</strong> <span x-text="summary.total_distance_km.toFixed(1) + ' km'"></span></p>
                         <p><strong>Total Duration:</strong> <span x-text="Math.floor(summary.total_duration_minutes / 60) + 'h ' + (summary.total_duration_minutes % 60) + 'm'"></span></p>
-                        <p><strong>Total Elevation:</strong> <span x-text="summary.total_elevation_gain_m + ' m'"></span></p>
+                        <p><strong>Total Elevation (Run/Trail/Hike):</strong> <span x-text="summary.total_elevation_gain_m + ' m'"></span></p>
                         <p><strong>Sessions:</strong> <span x-text="summary.sessions.length"></span></p>
                     </div>
                 </div>
@@ -93,9 +93,13 @@
                             <div class="p-3 flex-1 flex flex-col gap-2 overflow-y-auto">
                                 <!-- Sessions -->
                                 <template x-for="session in getSessionsForDate(day.dateStr)" :key="session.id">
-                                    <div @click="editSession(session)" class="p-2 rounded text-sm cursor-pointer hover:opacity-80 text-white" :class="getTypeColor(session.type)">
-                                        <div class="font-semibold capitalize" x-text="session.type"></div>
+                                    <div @click="editSession(session)" class="p-2 rounded text-sm cursor-pointer hover:opacity-80 text-white mb-1" :class="getTypeColor(session.type)">
+                                        <div class="font-semibold capitalize flex justify-between">
+                                            <span x-text="session.type"></span>
+                                            <span x-show="session.start_time" x-text="formatTime(session.start_time)" class="text-xs opacity-75"></span>
+                                        </div>
                                         <div class="text-xs opacity-90" x-text="formatSessionDetails(session)"></div>
+                                        <div x-show="session.notes" class="text-xs mt-1 pt-1 border-t border-white/20 italic line-clamp-2" x-text="session.notes"></div>
                                     </div>
                                 </template>
 
@@ -118,15 +122,24 @@
             <div class="bg-white rounded-lg p-6 w-full max-w-md" @click.away="isSessionModalOpen = false">
                 <h3 class="text-lg font-bold mb-4" x-text="sessionForm.id ? 'Edit Session' : 'Add Session'"></h3>
                 <form @submit.prevent="saveSession()" class="space-y-4">
-                    <div>
-                        <label class="block text-sm font-medium text-gray-700">Type</label>
-                        <select x-model="sessionForm.type" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2" required>
-                            <option value="run">Run</option>
-                            <option value="trail">Trail</option>
-                            <option value="strength">Strength</option>
-                            <option value="mobility">Mobility</option>
-                            <option value="other">Other</option>
-                        </select>
+                    <div class="grid grid-cols-2 gap-4">
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700">Type</label>
+                            <select x-model="sessionForm.type" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2" required>
+                                <option value="run">Run</option>
+                                <option value="trail">Trail</option>
+                                <option value="hike">Hike</option>
+                                <option value="bike">Bike</option>
+                                <option value="generic">Generic</option>
+                                <option value="strength">Strength</option>
+                                <option value="mobility">Mobility</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700">Time (optional)</label>
+                            <input type="time" x-model="sessionForm.time_str" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
+                        </div>
                     </div>
                     <div class="grid grid-cols-2 gap-4">
                         <div>
