--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,78 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Training OS</title>
+    <title>🏋️ Training OS</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.29.3/index.min.js"></script>
     <style>
         [x-cloak] { display: none !important; }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans antialiased" x-data="app()">
 
-    <div class="max-w-6xl mx-auto p-6">
+    <div class="max-w-7xl mx-auto px-8 py-6">
         <!-- Header -->
         <header class="flex justify-between items-center mb-8">
-            <h1 class="text-3xl font-bold text-gray-800">Training OS</h1>
+            <h1 class="text-3xl font-bold text-gray-800">🏋️ Training OS</h1>
             <div class="flex items-center space-x-4">
-                <button @click="prevWeek()" class="px-3 py-1 bg-white border rounded shadow-sm hover:bg-gray-50">&larr; Prev</button>
                 <span class="font-semibold text-lg" x-text="weekLabel"></span>
-                <button @click="nextWeek()" class="px-3 py-1 bg-white border rounded shadow-sm hover:bg-gray-50">Next &rarr;</button>
+                <a href="analysis.html" class="px-3 py-1 bg-white border rounded shadow-sm hover:bg-gray-50">📈 Analysis</a>
             </div>
         </header>
 
-        <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
-            
-            <!-- Left Sidebar: Weekly Plan -->
-            <div class="lg:col-span-1 bg-white p-5 rounded-lg shadow-sm border border-gray-200">
-                <div class="flex justify-between items-center mb-4">
-                    <h2 class="text-xl font-semibold">Weekly Plan</h2>
-                    <button @click="editPlan = !editPlan" class="text-sm text-blue-600 hover:underline" x-text="editPlan ? 'Cancel' : 'Edit'"></button>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
+            <div class="bg-white p-5 rounded-lg shadow-sm border border-gray-200">
+                <h2 class="text-xl font-semibold mb-3">📝 Weekly Plan</h2>
+
+                <div x-show="!editPlan" x-cloak @click="editPlan = true" class="cursor-pointer">
+                    <p class="text-gray-700 whitespace-pre-wrap" x-text="plan.description || 'Click to add your weekly plan.'"></p>
                 </div>
 
-                <!-- View Mode -->
-                <div x-show="!editPlan" x-cloak>
-                    <p class="text-gray-700 whitespace-pre-wrap mb-4" x-text="plan.description || 'No plan set for this week.'"></p>
-                    <div class="space-y-2 text-sm text-gray-600">
-                        <p><strong>Target Distance:</strong> <span x-text="plan.target_distance_km ? plan.target_distance_km + ' km' : '-'"></span></p>
-                        <p><strong>Target Sessions:</strong> <span x-text="plan.target_sessions || '-'"></span></p>
-                    </div>
-                </div>
-
-                <!-- Edit Mode -->
                 <form x-show="editPlan" @submit.prevent="savePlan()" x-cloak class="space-y-3">
                     <div>
-                        <label class="block text-sm font-medium text-gray-700">Description (Intent)</label>
                         <textarea x-model="planForm.description" rows="4" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2"></textarea>
                     </div>
-                    <div class="grid grid-cols-2 gap-2">
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">Target Km</label>
-                            <input type="number" step="0.1" x-model="planForm.target_distance_km" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">Sessions</label>
-                            <input type="number" x-model="planForm.target_sessions" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
-                        </div>
+                    <div class="flex justify-end space-x-2">
+                        <button type="button" @click="editPlan = false" class="bg-white border border-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-50 text-sm font-medium">Cancel</button>
+                        <button type="submit" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 text-sm font-medium">Save</button>
                     </div>
-                    <button type="submit" class="w-full bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 text-sm font-medium">Save Plan</button>
                 </form>
-
-                <!-- Weekly Summary (Actuals) -->
-                <div class="mt-8 pt-6 border-t border-gray-200">
-                    <h3 class="text-lg font-semibold mb-3">Actuals</h3>
-                    <div class="space-y-2 text-sm text-gray-600">
-                        <p><strong>Total Distance (Run/Trail):</strong> <span x-text="summary.total_distance_km.toFixed(1) + ' km'"></span></p>
-                        <p><strong>Total Duration:</strong> <span x-text="Math.floor(summary.total_duration_minutes / 60) + 'h ' + (summary.total_duration_minutes % 60) + 'm'"></span></p>
-                        <p><strong>Total Elevation (Run/Trail/Hike):</strong> <span x-text="summary.total_elevation_gain_m + ' m'"></span></p>
-                        <p><strong>Sessions:</strong> <span x-text="summary.sessions.length"></span></p>
-                    </div>
-                </div>
             </div>
 
-            <!-- Right Area: Calendar View -->
-            <div class="lg:col-span-3">
+            <div class="bg-white p-5 rounded-lg shadow-sm border border-gray-200">
+                <h3 class="text-lg font-semibold mb-3">📊 Week Stats</h3>
+                <div class="grid grid-cols-3 gap-y-2 gap-x-4 text-base text-gray-700">
+                    <p>🏃 <span x-text="weekStats.runTrailKm + ' km'"></span></p>
+                    <p>⛰️ <span x-text="weekStats.elevationM + ' m'"></span></p>
+                    <p>🏊 <span x-text="weekStats.swimKm + ' km'"></span></p>
+                    <p>🚴 <span x-text="weekStats.bikeKm + ' km'"></span></p>
+                    <p>💪 <span x-text="weekStats.strengthTime"></span></p>
+                    <p>⏱️ <span x-text="weekStats.totalTime"></span></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="grid grid-cols-1 gap-6">
+            <div>
+                <div class="grid grid-cols-3 items-center gap-3 mb-4">
+                    <div class="justify-self-start">
+                        <button @click="prevWeek()" class="px-4 py-2 bg-white border rounded-full shadow-sm hover:bg-gray-50 text-sm font-medium">&larr; Prev Week</button>
+                    </div>
+                    <div class="justify-self-center text-sm text-gray-600 font-medium" x-text="weekLabel"></div>
+                    <div class="justify-self-end">
+                        <button @click="nextWeek()" class="px-4 py-2 bg-white border rounded-full shadow-sm hover:bg-gray-50 text-sm font-medium">Next Week &rarr;</button>
+                    </div>
+                </div>
                 <div class="grid grid-cols-1 md:grid-cols-7 gap-4">
                     <template x-for="day in weekDays" :key="day.dateStr">
                         <div class="bg-white rounded-lg shadow-sm border border-gray-200 flex flex-col h-full min-h-[200px]">
@@ -91,25 +81,24 @@
 
                             <!-- Day Content -->
                             <div class="p-3 flex-1 flex flex-col gap-2 overflow-y-auto">
+                                <!-- Day Note -->
+                                <div>
+                                    <div x-show="getDayNote(day.dateStr)" class="text-sm text-gray-700 bg-yellow-50 p-2 rounded border border-yellow-100 cursor-pointer" @click="openNoteModal(day.dateStr)">
+                                        <span class="font-semibold">📝</span> <span x-text="getDayNote(day.dateStr)?.note" class="line-clamp-2"></span>
+                                    </div>
+                                    <button x-show="!getDayNote(day.dateStr)" @click="openNoteModal(day.dateStr)" class="text-sm text-gray-400 hover:text-gray-600 w-full text-left">+ Add note</button>
+                                </div>
+
                                 <!-- Sessions -->
                                 <template x-for="session in getSessionsForDate(day.dateStr)" :key="session.id">
-                                    <div @click="editSession(session)" class="p-2 rounded text-sm cursor-pointer hover:opacity-80 text-white mb-1" :class="getTypeColor(session.type)">
-                                        <div class="font-semibold capitalize flex justify-between">
-                                            <span x-text="session.type"></span>
-                                            <span x-show="session.start_time" x-text="formatTime(session.start_time)" class="text-xs opacity-75"></span>
+                                    <div @click="editSession(session)" class="p-3 rounded text-base cursor-pointer hover:opacity-80 text-white mb-1" :class="getTypeColor(session.type)">
+                                        <div class="font-semibold text-2xl leading-tight">
+                                            <span x-text="getTypeLabel(session.type)"></span>
                                         </div>
-                                        <div class="text-xs opacity-90" x-text="formatSessionDetails(session)"></div>
-                                        <div x-show="session.notes" class="text-xs mt-1 pt-1 border-t border-white/20 italic line-clamp-2" x-text="session.notes"></div>
+                                        <div class="text-base opacity-95 whitespace-pre-line leading-snug" x-text="formatSessionDetails(session)"></div>
+                                        <div x-show="session.notes" class="text-xs opacity-80 mt-1 line-clamp-1" x-text="session.notes"></div>
                                     </div>
                                 </template>
-
-                                <!-- Day Note -->
-                                <div class="mt-auto pt-2">
-                                    <div x-show="getDayNote(day.dateStr)" class="text-xs text-gray-600 bg-yellow-50 p-2 rounded border border-yellow-100 cursor-pointer" @click="openNoteModal(day.dateStr)">
-                                        <span class="font-semibold">Note:</span> <span x-text="getDayNote(day.dateStr)?.note" class="line-clamp-2"></span>
-                                    </div>
-                                    <button x-show="!getDayNote(day.dateStr)" @click="openNoteModal(day.dateStr)" class="text-xs text-gray-400 hover:text-gray-600 w-full text-left mt-1">+ Add note</button>
-                                </div>
                             </div>
                         </div>
                     </template>
@@ -120,20 +109,21 @@
         <!-- Session Modal -->
         <div x-show="isSessionModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" x-cloak>
             <div class="bg-white rounded-lg p-6 w-full max-w-md" @click.away="isSessionModalOpen = false">
-                <h3 class="text-lg font-bold mb-4" x-text="sessionForm.id ? 'Edit Session' : 'Add Session'"></h3>
+                <h3 class="text-lg font-bold mb-4" x-text="sessionForm.id ? '🎯 Activity Details' : '➕ Add Activity'"></h3>
                 <form @submit.prevent="saveSession()" class="space-y-4">
                     <div class="grid grid-cols-2 gap-4">
                         <div>
                             <label class="block text-sm font-medium text-gray-700">Type</label>
                             <select x-model="sessionForm.type" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2" required>
-                                <option value="run">Run</option>
-                                <option value="trail">Trail</option>
-                                <option value="hike">Hike</option>
-                                <option value="bike">Bike</option>
-                                <option value="generic">Generic</option>
-                                <option value="strength">Strength</option>
-                                <option value="mobility">Mobility</option>
-                                <option value="other">Other</option>
+                                <option value="run">🏃 Run</option>
+                                <option value="trail">🏃 Trail</option>
+                                <option value="swim">🏊 Swim</option>
+                                <option value="hike">🥾 Hike</option>
+                                <option value="bike">🚴 Bike</option>
+                                <option value="skate">⛸️ Skate</option>
+                                <option value="strength">💪 Strength</option>
+                                <option value="mobility">🧘 Mobility</option>
+                                <option value="other">✨ Other</option>
                             </select>
                         </div>
                         <div>
@@ -148,7 +138,7 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700">Distance (km)</label>
-                            <input type="number" step="0.1" x-model="sessionForm.distance_km" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
+                            <input type="number" step="any" x-model="sessionForm.distance_km" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700">Elevation (m)</label>
@@ -159,9 +149,22 @@
                             <input type="number" min="1" max="10" x-model="sessionForm.perceived_intensity" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
                         </div>
                     </div>
+
+                    <div x-show="sessionForm.type === 'strength'" class="border rounded-md p-3 bg-gray-50">
+                        <div class="text-sm font-medium text-gray-700 mb-2">Strength Focus (multi-select)</div>
+                        <div class="grid grid-cols-2 gap-2 text-sm">
+                            <label class="inline-flex items-center gap-2"><input type="checkbox" value="Pull" :checked="sessionForm.strength_focuses.includes('Pull')" @change="toggleStrengthFocus('Pull')">Pull</label>
+                            <label class="inline-flex items-center gap-2"><input type="checkbox" value="Push" :checked="sessionForm.strength_focuses.includes('Push')" @change="toggleStrengthFocus('Push')">Push</label>
+                            <label class="inline-flex items-center gap-2"><input type="checkbox" value="Legs" :checked="sessionForm.strength_focuses.includes('Legs')" @change="toggleStrengthFocus('Legs')">Legs</label>
+                            <label class="inline-flex items-center gap-2"><input type="checkbox" value="Abs" :checked="sessionForm.strength_focuses.includes('Abs')" @change="toggleStrengthFocus('Abs')">Abs</label>
+                            <label class="inline-flex items-center gap-2"><input type="checkbox" value="All body" :checked="sessionForm.strength_focuses.includes('All body')" @change="toggleStrengthFocus('All body')">All body</label>
+                            <label class="inline-flex items-center gap-2"><input type="checkbox" value="Legs and Abs" :checked="sessionForm.strength_focuses.includes('Legs and Abs')" @change="toggleStrengthFocus('Legs and Abs')">Legs and Abs</label>
+                        </div>
+                    </div>
+
                     <div>
                         <label class="block text-sm font-medium text-gray-700">Notes</label>
-                        <textarea x-model="sessionForm.notes" rows="3" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2"></textarea>
+                        <textarea x-model="sessionForm.notes" @keydown.meta.enter.prevent="saveSession()" @keydown.ctrl.enter.prevent="saveSession()" rows="3" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2"></textarea>
                     </div>
                     <div class="flex justify-between pt-4">
                         <button type="button" x-show="sessionForm.id" @click="deleteSession()" class="text-red-600 hover:text-red-800 text-sm font-medium">Delete</button>
@@ -169,6 +172,9 @@
                             <button type="button" @click="isSessionModalOpen = false" class="bg-white border border-gray-300 text-gray-700 py-2 px-4 rounded hover:bg-gray-50 text-sm font-medium">Cancel</button>
                             <button type="submit" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 text-sm font-medium">Save</button>
                         </div>
+                    </div>
+                    <div x-show="sessionForm.external_id" class="text-[11px] text-gray-500 pt-2 border-t border-gray-100">
+                        Imported from: <span x-text="sessionForm.external_id"></span>
                     </div>
                 </form>
             </div>
