--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,6 +11,7 @@
         .clamp-3 {
             display: -webkit-box;
             -webkit-line-clamp: 3;
+            line-clamp: 3;
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
@@ -83,7 +84,7 @@
                                     <div class="text-xs text-gray-500 uppercase font-semibold" x-text="day.dayName"></div>
                                     <div class="text-lg font-bold text-gray-800" x-text="day.dayNumber"></div>
                                 </div>
-                                <button @click="openSessionModal(day.dateStr)" class="text-gray-400 hover:text-blue-600" title="Add Session">
+                                <button @click="openNoteModal(day.dateStr)" class="text-gray-400 hover:text-blue-600" title="Add note">
                                     <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4"></path></svg>
                                 </button>
                             </div>
@@ -95,7 +96,6 @@
                                     <div x-show="getDayNote(day.dateStr)" class="text-sm text-gray-700 bg-yellow-50 p-2 rounded border border-yellow-100 cursor-pointer" @click="openNoteModal(day.dateStr)">
                                         <span class="font-semibold">📝</span> <span x-text="getDayNote(day.dateStr)?.note" class="line-clamp-2"></span>
                                     </div>
-                                    <button x-show="!getDayNote(day.dateStr)" @click="openNoteModal(day.dateStr)" class="text-sm text-gray-400 hover:text-gray-600 w-full text-left">+ Add note</button>
                                 </div>
 
                                 <!-- Sessions -->
@@ -108,6 +108,7 @@
                                         <div x-show="getSessionNoteDisplay(session)" class="text-sm opacity-90 mt-1 whitespace-pre-line leading-snug clamp-3" x-text="getSessionNoteDisplay(session)"></div>
                                     </div>
                                 </template>
+                                <button @click="openSessionModal(day.dateStr)" class="text-sm text-gray-400 hover:text-gray-600 w-full text-left">+ Add activity</button>
                             </div>
                         </div>
                     </template>
