--- a/frontend/index.html
+++ b/frontend/index.html
@@ -116,6 +116,66 @@
             </div>
         </div>
 
+        <div class="bg-white p-5 rounded-lg shadow-sm border border-gray-200 mt-6">
+            <h3 class="text-xl font-semibold mb-3">🧠 Coach</h3>
+            <div class="border border-gray-200 rounded-md p-3 bg-gray-50 h-72 overflow-y-auto space-y-3">
+                <template x-if="chatMessages.length === 0">
+                    <div class="text-sm text-gray-500">Start by asking a question about your current week.</div>
+                </template>
+                <template x-for="(message, idx) in chatMessages" :key="idx">
+                    <div :class="message.role === 'user' ? 'flex justify-end' : 'flex justify-start'">
+                        <div :class="message.role === 'user'
+                            ? 'max-w-[80%] rounded-2xl rounded-br-sm bg-blue-600 text-white px-3 py-2 text-sm whitespace-pre-wrap'
+                            : 'max-w-[80%] rounded-2xl rounded-bl-sm bg-white border border-gray-200 text-gray-800 px-3 py-2 text-sm prose prose-sm max-w-none'">
+                            <template x-if="message.role === 'user'">
+                                <div x-text="message.content"></div>
+                            </template>
+                            <template x-if="message.role !== 'user'">
+                                <div x-html="renderCoachMarkdown(message.content)"></div>
+                            </template>
+                        </div>
+                    </div>
+                </template>
+            </div>
+
+            <p x-show="chatError" x-text="chatError" class="text-sm text-red-600 mt-2"></p>
+
+            <form @submit.prevent="sendChatMessage()" class="mt-3 flex items-center gap-2">
+                <input
+                    type="text"
+                    x-model="chatInput"
+                    :disabled="isChatLoading"
+                    placeholder="Ask the coach about your training..."
+                    class="flex-1 rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2"
+                >
+                <button type="submit" :disabled="isChatLoading || !chatInput.trim()" class="bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-700 text-sm font-medium disabled:opacity-50">
+                    <span x-text="isChatLoading ? 'Sending…' : 'Send'"></span>
+                </button>
+            </form>
+
+            <details class="mt-4 border border-gray-200 rounded-md bg-gray-50">
+                <summary class="cursor-pointer px-3 py-2 text-sm font-medium text-gray-700">Developer debug (request + coach context)</summary>
+                <div class="p-3 space-y-3 text-xs">
+                    <div>
+                        <p class="font-semibold text-gray-700 mb-1">Last Query</p>
+                        <pre class="bg-white border border-gray-200 rounded p-2 overflow-x-auto whitespace-pre-wrap" x-text="chatDebug.lastQuery || ''"></pre>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-700 mb-1">Last Request Payload</p>
+                        <pre class="bg-white border border-gray-200 rounded p-2 overflow-x-auto whitespace-pre-wrap" x-text="formatDebugJson(chatDebug.lastPayload)"></pre>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-700 mb-1">Last Context Sent To Coach</p>
+                        <pre class="bg-white border border-gray-200 rounded p-2 overflow-x-auto whitespace-pre-wrap" x-text="formatDebugJson(chatDebug.lastContext)"></pre>
+                    </div>
+                    <div>
+                        <p class="font-semibold text-gray-700 mb-1">Last Audit</p>
+                        <pre class="bg-white border border-gray-200 rounded p-2 overflow-x-auto whitespace-pre-wrap" x-text="formatDebugJson(chatDebug.lastAudit)"></pre>
+                    </div>
+                </div>
+            </details>
+        </div>
+
         <!-- Session Modal -->
         <div x-show="isSessionModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50" x-cloak>
             <div class="bg-white rounded-lg p-6 w-full max-w-md" @click.away="isSessionModalOpen = false">
