--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,7 +132,7 @@
                             ? 'max-w-[80%] rounded-2xl rounded-br-sm bg-blue-600 text-white px-3 py-2 text-sm whitespace-pre-wrap'
                             : 'max-w-[80%] rounded-2xl rounded-bl-sm bg-white border border-gray-200 text-gray-800 px-3 py-2 text-sm prose prose-sm max-w-none'">
                             <template x-if="message.role === 'user'">
-                                <div x-text="message.content"></div>
+                                <div class="leading-snug whitespace-pre-line break-words" x-text="message.content"></div>
                             </template>
                             <template x-if="message.role !== 'user'">
                                 <div x-html="renderCoachMarkdown(message.content)"></div>
@@ -148,6 +148,8 @@
                 <textarea
                     x-model="chatInput"
                     @keydown.enter.exact.prevent="sendChatMessage()"
+                    @keydown.meta.enter.prevent="sendChatMessage()"
+                    @keydown.ctrl.enter.prevent="sendChatMessage()"
                     :disabled="isChatLoading"
                     placeholder="Ask the coach about your training..."
                     rows="2"
