--- a/frontend/index.html
+++ b/frontend/index.html
@@ -102,10 +102,11 @@
                                 <!-- Sessions -->
                                 <template x-for="session in getSessionsForDate(day.dateStr)" :key="session.id">
                                     <div @click="editSession(session)" class="p-3 rounded text-base cursor-pointer hover:opacity-80 text-white mb-1" :class="getTypeColor(session.type)">
-                                        <div class="font-semibold text-2xl leading-tight">
+                                        <div class="font-semibold text-xl leading-tight flex items-center gap-2">
                                             <span x-text="getTypeLabel(session.type)"></span>
+                                            <span x-text="formatSessionCompactDuration(session)"></span>
                                         </div>
-                                        <div class="text-base opacity-95 whitespace-pre-line leading-snug" x-text="formatSessionDetails(session)"></div>
+                                        <div x-show="formatSessionCompactDistance(session)" class="text-base opacity-95 leading-snug" x-text="formatSessionCompactDistance(session)"></div>
                                         <div x-show="getSessionNoteDisplay(session)" class="text-sm opacity-90 mt-1 whitespace-pre-line leading-snug clamp-3" x-text="getSessionNoteDisplay(session)"></div>
                                     </div>
                                 </template>
@@ -145,11 +146,20 @@
             <p x-show="chatError" x-text="chatError" class="text-sm text-red-600 mt-2"></p>
 
             <form @submit.prevent="sendChatMessage()" class="mt-3 flex items-center gap-2">
+                <select
+                    x-model="selectedChatModel"
+                    @change="setChatModel($event.target.value)"
+                    :disabled="isChatLoading"
+                    class="rounded-md border-gray-300 bg-white shadow-sm focus:border-blue-500 focus:ring-blue-500 text-sm border p-2"
+                    title="Mistral model"
+                >
+                    <template x-for="model in chatModelOptions" :key="model">
+                        <option :value="model" x-text="model"></option>
+                    </template>
+                </select>
                 <textarea
                     x-model="chatInput"
-                    @keydown.enter.exact.prevent="sendChatMessage()"
-                    @keydown.meta.enter.prevent="sendChatMessage()"
-                    @keydown.ctrl.enter.prevent="sendChatMessage()"
+                    @keydown="handleChatInputKeydown($event)"
                     :disabled="isChatLoading"
                     placeholder="Ask the coach about your training..."
                     rows="2"
@@ -209,10 +219,12 @@
                         </div>
                         <div>
                             <label class="block text-sm font-medium text-gray-700">Time (optional)</label>
-                            <input type="time" x-model="sessionForm.time_str" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
+                            <input x-show="!sessionForm.id" type="time" x-model="sessionForm.time_str" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
+                            <div x-show="sessionForm.id" class="mt-1 text-sm text-gray-700 border rounded-md p-2 bg-gray-50" x-text="sessionForm.start_time ? formatTime(sessionForm.start_time) : '—'"></div>
                         </div>
                     </div>
-                    <div class="grid grid-cols-2 gap-4">
+
+                    <div x-show="!sessionForm.id" class="grid grid-cols-2 gap-4">
                         <div>
                             <label class="block text-sm font-medium text-gray-700">Duration (min)</label>
                             <input type="number" x-model="sessionForm.duration_minutes" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2" required>
@@ -225,6 +237,25 @@
                             <label class="block text-sm font-medium text-gray-700">Elevation (m)</label>
                             <input type="number" x-model="sessionForm.elevation_gain_m" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
                         </div>
+                        <div>
+                            <label class="block text-sm font-medium text-gray-700">Intensity (1-10)</label>
+                            <input type="number" min="1" max="10" x-model="sessionForm.perceived_intensity" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
+                        </div>
+                    </div>
+
+                    <div x-show="sessionForm.id" class="border rounded-md p-3 bg-gray-50">
+                        <div class="text-sm font-medium text-gray-700 mb-2">Read-only metrics</div>
+                        <div class="grid grid-cols-2 gap-2 text-sm text-gray-700">
+                            <div>Moving: <span class="font-medium" x-text="formatDuration(sessionForm.moving_duration_minutes || sessionForm.duration_minutes)"></span></div>
+                            <div>Elapsed: <span class="font-medium" x-text="formatDuration(sessionForm.elapsed_duration_minutes || sessionForm.duration_minutes)"></span></div>
+                            <div>Distance: <span class="font-medium" x-text="sessionForm.distance_km ? formatKm(sessionForm.distance_km) + ' km' : '—'"></span></div>
+                            <div>Elevation: <span class="font-medium" x-text="sessionForm.elevation_gain_m ? sessionForm.elevation_gain_m + ' m' : '—'"></span></div>
+                            <div>Avg pace: <span class="font-medium" x-text="formatPace(sessionForm.average_pace_min_per_km) || '—'"></span></div>
+                            <div>HR avg/max: <span class="font-medium" x-text="formatHeartRate(sessionForm.average_heart_rate_bpm, sessionForm.max_heart_rate_bpm) || '—'"></span></div>
+                        </div>
+                    </div>
+
+                    <div x-show="sessionForm.id" class="grid grid-cols-1">
                         <div>
                             <label class="block text-sm font-medium text-gray-700">Intensity (1-10)</label>
                             <input type="number" min="1" max="10" x-model="sessionForm.perceived_intensity" class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500 sm:text-sm border p-2">
