Add to chat history swith; better & more robust md rendering for coach responses

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,61 @@
             -webkit-box-orient: vertical;
             overflow: hidden;
         }
+        .coach-markdown h1,
+        .coach-markdown h2,
+        .coach-markdown h3,
+        .coach-markdown h4,
+        .coach-markdown h5,
+        .coach-markdown h6 {
+            font-weight: 600;
+            color: #111827;
+            margin-top: 0.5rem;
+            margin-bottom: 0.35rem;
+        }
+        .coach-markdown p {
+            margin: 0.35rem 0;
+            white-space: pre-wrap;
+        }
+        .coach-markdown ul,
+        .coach-markdown ol {
+            margin: 0.35rem 0 0.35rem 1.1rem;
+        }
+        .coach-markdown table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 0.5rem 0;
+            font-size: 0.8rem;
+        }
+        .coach-markdown th,
+        .coach-markdown td {
+            border: 1px solid #e5e7eb;
+            padding: 0.35rem 0.45rem;
+            text-align: left;
+            vertical-align: top;
+        }
+        .coach-markdown th {
+            background: #f9fafb;
+            font-weight: 600;
+        }
+        .coach-markdown code {
+            background: #f3f4f6;
+            border-radius: 0.25rem;
+            padding: 0.05rem 0.3rem;
+            font-size: 0.75rem;
+        }
+        .coach-markdown pre {
+            background: #111827;
+            color: #f9fafb;
+            border-radius: 0.375rem;
+            padding: 0.6rem;
+            overflow-x: auto;
+            margin: 0.45rem 0;
+        }
+        .coach-markdown pre code {
+            background: transparent;
+            padding: 0;
+            color: inherit;
+        }
     </style>
 </head>
 <body class="bg-gray-50 text-gray-900 font-sans antialiased" x-data="app()">
@@ -126,17 +181,21 @@
                     <button @click="startNewChat()" class="px-3 py-1 bg-white border rounded shadow-sm hover:bg-gray-50 text-sm">New chat</button>
                 </div>
             </div>
+            <label class="inline-flex items-center gap-2 text-sm text-gray-700 mb-3">
+                <input type="checkbox" :checked="saveChatHistory" @change="setSaveChatHistory($event.target.checked)">
+                Save to history
+            </label>
             <div class="border border-gray-200 rounded-md p-3 bg-gray-50 h-72 overflow-y-auto space-y-3">
                 <template x-for="(message, idx) in chatMessages" :key="idx">
                     <div :class="message.role === 'user' ? 'flex justify-end' : 'flex justify-start'">
                         <div :class="message.role === 'user'
                             ? 'max-w-[80%] rounded-2xl rounded-br-sm bg-blue-600 text-white px-3 py-2 text-sm whitespace-pre-wrap'
-                            : 'max-w-[80%] rounded-2xl rounded-bl-sm bg-white border border-gray-200 text-gray-800 px-3 py-2 text-sm prose prose-sm max-w-none'">
+                            : 'max-w-[80%] rounded-2xl rounded-bl-sm bg-white border border-gray-200 text-gray-800 px-3 py-2 text-sm'">
                             <template x-if="message.role === 'user'">
                                 <div class="leading-snug whitespace-pre-line break-words" x-text="message.content"></div>
                             </template>
                             <template x-if="message.role !== 'user'">
-                                <div x-html="renderCoachMarkdown(message.content)"></div>
+                                <div class="coach-markdown" x-html="renderCoachMarkdown(message.content)"></div>
                             </template>
                         </div>
                     </div>
@@ -311,6 +370,8 @@
 
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.2.6/dist/purify.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
